<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ETAutoCode"
            android:layout_width="180dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/ETAutoCode"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="420dp" />

        <TextView
            android:id="@+id/TVAutoCode"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/TVAutoCode"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="424dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/ETAutoBody"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ETAutoBody"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="123dp" />

        <TextView
            android:id="@+id/TVAutoBody"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/TVAutoBody"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="131dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/ETAutoModel"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ETAutoModel"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="158dp" />


        <TextView
            android:id="@+id/TVAutoModel"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/TVAutoModel"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="166dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/ETAutoProductionYear"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ETAutoProductionYear"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="234dp" />

        <TextView
            android:id="@+id/TVAutoProductionYear"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/TVAutoProductionYear"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="240dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <EditText
            android:id="@+id/ETAutoHorsePower"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ETAutoHorsePower"
            android:inputType="number"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="280dp" />

        <TextView
            android:id="@+id/TVAutoHorsePower"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/TVAutoHorsePower"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="272dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <EditText
            android:id="@+id/ETAutoRagistrationDate"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ETAutoRagistrationDate"
            android:inputType="number"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="344dp" />

        <TextView
            android:id="@+id/TVAutoRagistrationDate"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/TVAutoRagistrationDate"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="352dp" />

    </LinearLayout>


    <Button
        android:id="@+id/ButtSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ButtOCR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>